<resources>
    <string name="app_name">NMedia</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Enter post text</string>
    <string name="description_post_like">Like</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="edit_message">Edit Message</string>
    <string name="share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add post</string>
    <string name="video_chooser">Select an application</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="new_posts">New posts</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat the password</string>
    <string name="error_auth">Invalid username or password</string>
</resources>